[package]
name = "imagine"
version = "0.1.0"
edition = "2021"
authors = ["GHOST <ghostdevbusiness@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http'] }
worker-macros = { version = "0.5.0", features = ['http'] }
console_error_panic_hook = { version = "0.1.1" }
gif = "0.13.1"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
text_on_image = "0.1.0"
